[package]
name = "uorb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", default-features = false }
uorb_macro_helper = { path = "uorb_macro_helper" }

[features]
default = ["std"]
std = []

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

[workspace]
members = [ "uorb_macro_helper" ]
