[package]
name = "uorb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", default-features = false }
tokio = { version = "*", features = ["full"], optional = true }

[features]
# default = ["std"]
std = ["dep:tokio"]

[lib]
harness = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

[workspace]
members = [ "rtic_uorb", "uorb_macro", "uorb_macro_helper" ]

